// Kademlia rpc arguments and responses and callback results for FindNode, Join and Leave
import "maidsafe/protobuf/contact_info.proto";
import "maidsafe/protobuf/rpcmessage.proto";
import "maidsafe/protobuf/signed_kadvalue.proto";

package kad;

message PingRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional PingRequest ping_request = 1;
  }
  required bytes ping = 1;
  required ContactInfo sender_info = 2;
}

message PingResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional PingResponse ping_response = 2;
  }
  required bool result = 1;
  optional bytes echo = 2;
  optional bytes node_id = 3;
};

message FindRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional FindRequest find_request = 3;
  }
  required bytes key = 1;
  required ContactInfo sender_info = 2;
  optional bool is_boostrap = 3;
  optional bytes sender_ext_ip = 4;
  optional int32 sender_ext_port = 5;
};

message FindResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional FindResponse find_response = 4;
  }
  required bool result = 1;
  repeated bytes closest_nodes = 2;
  repeated bytes values = 3;
  repeated SignedValue signed_values = 4;
  optional ContactInfo alternative_value_holder = 5;
  optional bytes needs_cache_copy = 6;
  optional bytes requester_ext_addr = 7;
  optional bytes node_id = 8;
};

message FindNodeResult {
  required bool result = 1;
  optional bytes contact = 2;
  optional bytes node_id = 3;
};

message StoreRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional StoreRequest store_request = 5;
  }
  required bytes key = 1;
  optional bytes value = 2;
  optional SignedValue sig_value = 3;
  required int32 ttl = 4;
  required ContactInfo sender_info = 5;
  required bool publish = 6;
  optional SignedRequest signed_request = 7;
};

message StoreResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional StoreResponse store_response = 6;
  }
  required bool result = 1;
  optional bytes node_id = 2;
  optional SignedRequest signed_request = 3;
};

message DeleteRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional DeleteRequest delete_request = 7;
  }
  required bytes key = 1;
  required SignedValue value = 2;
  required SignedRequest signed_request = 3;
  required ContactInfo sender_info = 4;
};

message DeleteResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional DeleteResponse delete_response = 8;
  }
  required bool result = 1;
  optional bytes node_id = 2;
};

message UpdateRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional UpdateRequest update_request = 9;
  }
  required bytes key = 1;
  required SignedValue new_value = 2;
  required SignedValue old_value = 3;
  required int32 ttl = 4;
  required SignedRequest request = 5;
  required ContactInfo sender_info = 6;
};

message UpdateResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional UpdateResponse update_response = 10;
  }
  required bool result = 1;
  optional bytes node_id = 2;
};

message DownlistRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional DownlistRequest downlist_request = 11;
  }
  repeated bytes downlist = 1;
  required ContactInfo sender_info = 2;
};

message DownlistResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional DownlistResponse downlist_response = 12;
  }
  required bool result = 1;
  optional bytes node_id = 2;
};

message NatDetectionRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional NatDetectionRequest nat_detection_request = 13;
  }
  required bytes newcomer = 1;
  required bytes bootstrap_node = 2;
  required int32 type = 3;  //1: Node B asks C to try ping A; 2: Node B asks C to try a rendezvous to A with B as rendezvous
  required bytes sender_id = 4;
};

message NatDetectionResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional NatDetectionResponse nat_detection_response = 14;
  }
  required bool result = 1;
};

message NatDetectionPingRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional NatDetectionPingRequest nat_detection_ping_request = 15;
  }
  required bytes ping = 1;
};

message NatDetectionPingResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional NatDetectionPingResponse nat_detection_ping_response = 16;
  }
  required bool result = 1;
  optional bytes echo = 2;
  optional bytes node_id = 3;
};

message BootstrapRequest {
  extend rpcprotocol.RpcMessage.Detail {
    optional BootstrapRequest bootstrap_request = 17;
  }
  required bytes newcomer_id = 1;
  required bytes newcomer_local_ip = 2;
  required int32 newcomer_local_port = 3;
  required int32 node_type = 4;
  optional bytes newcomer_ext_ip = 5;
  optional int32 newcomer_ext_port = 6;
};

message BootstrapResponse {
  extend rpcprotocol.RpcMessage.Detail {
    optional BootstrapResponse bootstrap_response = 18;
  }
  required bool result = 1;
  optional bytes bootstrap_id = 2;
  optional bytes newcomer_ext_ip = 3;
  optional int32 newcomer_ext_port = 4;
  optional int32 nat_type = 5; // 1: directly connected or behind full-cone router or ...
                               // 2: need rendezvous server to punch the hole
                               // 3. no connection
};
